--- a/CIE202-Proj.vcxproj.filters
+++ b/CIE202-Proj.vcxproj.filters
@@ -165,9 +165,6 @@
     <ClCompile Include="Actions\ActionSelect.cpp">
       <Filter>Actions</Filter>
     </ClCompile>
-    <ClCompile Include="Actions\ActionEdit.cpp">
-      <Filter>Actions</Filter>
-    </ClCompile>
     <ClCompile Include="Actions\ActionAddLabel.cpp">
       <Filter>Actions</Filter>
     </ClCompile>
@@ -223,6 +220,9 @@
       <Filter>Actions</Filter>
     </ClCompile>
     <ClCompile Include="Copy.cpp" />
+    <ClCompile Include="Actions\ActionAddFuse.cpp" />
+    <ClCompile Include="Components\Fuse.cpp" />
+    <ClCompile Include="actioncut.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actions\Action.h">
@@ -323,9 +323,6 @@
     <ClInclude Include="Actions\ActionSelect.h">
       <Filter>Actions</Filter>
     </ClInclude>
-    <ClInclude Include="Actions\ActionEdit.h">
-      <Filter>Actions</Filter>
-    </ClInclude>
     <ClInclude Include="Actions\ActionAddLabel.h">
       <Filter>Actions</Filter>
     </ClInclude>
@@ -381,6 +378,9 @@
       <Filter>Actions</Filter>
     </ClInclude>
     <ClInclude Include="Copy.h" />
+    <ClInclude Include="Actions\ActionAddFuse.h" />
+    <ClInclude Include="Components\Fuse.h" />
+    <ClInclude Include="actioncut.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMUgraphicsLib\Manual.txt">
